fixing some column layout issues

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -27,7 +27,9 @@
 
 			&.half .first-column{ width: 48%; margin-right: 2%; }
 			&.one-quarter .first-column{ width: 23%; margin-right: 2%; }
+			&.one-quarter .second-column{ width: 75%; }
 			&.three-quarter .first-column{ width: 73%; margin-right: 2%; }
+			&.three-quarter .second-column { width: 25%; }
 			&.quarters .column{ width: 23%; margin-right: 2%; }
 			
 		}
