--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1068,27 +1068,35 @@ footer .column li {
   margin-right: 2%;
 }
 /* line 30, ../sass/_page.scss */
+.page .row .columns.one-quarter .second-column {
+  width: 75%;
+}
+/* line 31, ../sass/_page.scss */
 .page .row .columns.three-quarter .first-column {
   width: 73%;
   margin-right: 2%;
 }
-/* line 31, ../sass/_page.scss */
+/* line 32, ../sass/_page.scss */
+.page .row .columns.three-quarter .second-column {
+  width: 25%;
+}
+/* line 33, ../sass/_page.scss */
 .page .row .columns.quarters .column {
   width: 23%;
   margin-right: 2%;
 }
 @media screen and (max-width: 1400px) {
-  /* line 44, ../sass/_page.scss */
+  /* line 46, ../sass/_page.scss */
   .page .row .columns.quarters .column {
     width: 48%;
   }
-  /* line 46, ../sass/_page.scss */
+  /* line 48, ../sass/_page.scss */
   .page .row .columns.quarters .column:nth-child(2n+1) {
     clear: left;
   }
 }
 @media screen and (max-width: 800px) {
-  /* line 60, ../sass/_page.scss */
+  /* line 62, ../sass/_page.scss */
   .page .row .columns.quarters .column {
     width: 100%;
     float: none;
